objects/vlocity_ins__VlocityStateTransition__c.object
<CustomObject>
    <description>A state transition allowed within a given version of a Vlocity State Model. Master-detail child object of Vlocity State Model Version.</description>
    <fields>
        <fullName>vlocity_ins__Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>From</label>
        <referenceTo>vlocity_ins__VlocityState__c</referenceTo>
        <relationshipLabel>Vlocity State Transition</relationshipLabel>
        <relationshipName>VlocityStateTransition</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__StateModelVersionId__c</fullName>
        <label>Vlocity State Model Version</label>
        <referenceTo>vlocity_ins__VlocityStateModelVersion__c</referenceTo>
        <relationshipLabel>Vlocity State Transition</relationshipLabel>
        <relationshipName>Vlocity_State_Transition</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>To</label>
        <referenceTo>vlocity_ins__VlocityState__c</referenceTo>
        <relationshipLabel>Vlocity State Transition (To)</relationshipLabel>
        <relationshipName>ToState</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Vlocity State Transition</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Vlocity State Transition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity State Transitions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>